--- a/src/components/LeftBar/ChatList/ChatList.module.scss
+++ b/src/components/LeftBar/ChatList/ChatList.module.scss
@@ -38,12 +38,13 @@
 }
 
 .main-text {
-  font-size: 18px;
+  font-size: 14px;
   margin-top: 8px;
   margin-bottom: 4px;
+  color: rgb(var(--primary-color-rgb), .75);
 }
 
 .sub-text {
   font-size: 14px;
-  color: #888;
+  color: var(--branded-color);
 }
