--- a/src/components/LeftBar/SearchBar/SearchBar.module.scss
+++ b/src/components/LeftBar/SearchBar/SearchBar.module.scss
@@ -29,7 +29,6 @@
   flex: 1;
   margin-left: 16px;
   text-align: left;
-  letter-spacing: -1px;
 }
 
 .sidebarTopIcons {
@@ -74,8 +73,7 @@
   display: flex;
   justify-content: flex-start;
   background: rgb(var(--primary-color-rgb), .05);
-  border: 1px solid rgb(var(--primary-color-rgb), .15);
-  border-radius: 9px;
+  border-radius: 10px;
   padding: 8px 15px;
   width: 100%;
   align-items: center;
@@ -90,7 +88,7 @@
 .searchContainer {
   display: flex;
   align-items: center;
-  margin: 14px 14px 0 14px;
+  margin: 14px 10px 0;
 }
 
 .searchIcon {
