--- a/src/components/LeftBar/SidebarFooter/SidebarFooter.module.scss
+++ b/src/components/LeftBar/SidebarFooter/SidebarFooter.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 6px;
-  color: var(--primary-color, #000000);
+  color: var(--primary-color);
   border-radius: 8px;
   gap: 10px;
 }
@@ -149,7 +149,7 @@
   justify-content: center;
   padding: 16px 0 8px 0;
   border-top: 1px solid rgb(96 96 96 / 0.5);
-  background: transparent;
+  background: var(--background-chat-list-color);
 }
 
 .navBtn {
