--- a/src/components/RightBar/ChatWindow.module.scss
+++ b/src/components/RightBar/ChatWindow.module.scss
@@ -7,6 +7,8 @@
   position: relative;
   user-select: none;
   background-color: #111111;
+  transition: opacity 0.35s cubic-bezier(.4, 0, .2, 1),
+              transform 0.35s cubic-bezier(.4, 0, .2, 1);
 }
 
 .chatWindow {
@@ -20,6 +22,18 @@
   position: relative;
   user-select: none;
   background: transparent;
+  animation: chatSlideIn 0.35s cubic-bezier(.4, 0, .2, 1);
+}
+
+@keyframes chatSlideIn {
+  0% {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .messageListWrapper {
