--- a/src/components/LeftBar/ChatList/ChatItem/ChatItem.module.scss
+++ b/src/components/LeftBar/ChatList/ChatItem/ChatItem.module.scss
@@ -58,7 +58,7 @@
   font-weight: 500;
   font-size: 16px;
   color: var(--primary-color);
-  --emoji-size: 16px;
+  	--emoji-size: 16px;
 }
 
 .chatMessage {
@@ -88,6 +88,7 @@
   margin-left: 4px;
   opacity: 0.8;
   vertical-align: middle;
+  color: inherit;
 }
 
 .previewImage {
@@ -123,6 +124,7 @@
   margin-left: 6px;
   display: inline-flex;
   align-items: center;
+  color: var(--branded-color);
 }
 
 .chatMessageRow {
